Fix: sort out vertical text alignments

--- a/src/ishi/15-tables/common/_headings.scss
+++ b/src/ishi/15-tables/common/_headings.scss
@@ -1,4 +1,5 @@
 th {
     text-align: left;
+    vertical-align: bottom;
     padding-bottom: $type-p-spacing / 2;
 }
